--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     },
     "devDependencies": {
       "mocha": "^10.2.0",
-      "supertest": "^6.3.3"
+      "supertest": "^6.3.3",
+      "sinon": "^17.0.1",
+      "proxyquire": "^2.1.3"
     }
   }
